--- a/angular.json
+++ b/angular.json
@@ -15,15 +15,18 @@
           "options": {
             "outputPath": "dist/sistema-banco-angular",
             "index": "src/index.html",
-            "browser": "src/main.ts",
+             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/favicon.ico",
+              "src/assets",
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "public",
+                "output": "/"
               }
             ],
             "styles": [
